docs: make sure you can still open the sidebar on mobile

--- a/templates/default/fulldoc/html/css/navbar.css
+++ b/templates/default/fulldoc/html/css/navbar.css
@@ -20,30 +20,31 @@
     display: none;
 }
 
-@media (min-width: 860px) {
-    .navbar .logo {
-        height: 2.51429rem!important;
-        min-width: 2.51429rem!important;
-        margin-right: .91429rem!important;
-        width: inherit;
-    }
+.sidebar .nav-links {
+    display: none;
+    border-bottom: 1px solid #eaecef;
+    padding: .5rem 0 .75rem;
 }
 
 @media (max-width: 859px) {
+    .navbar {
+        padding-left: 4rem;
+    }
+
     .navbar .links {
         padding-left: 1.5rem;
     }
-}
 
-@media (max-width: 859px) {
     .navbar .can-hide {
         display: none;
     }
-}
 
-@media (prefers-color-scheme: light) {
-    .navbar:not(.headroom--top):not(.transparent) {
-        background-color: rgba(250,250,252,.9)!important;
+    .search-box {
+        margin-right: 0;
+    }
+
+    .sidebar .nav-links {
+        display: block;
     }
 }
 
@@ -52,6 +53,19 @@
         padding: .8rem 1.71429rem!important;
         line-height: 2.51429rem!important;
         height: 4.11429rem!important;
+    }
+
+    .navbar .logo {
+        height: 2.51429rem!important;
+        min-width: 2.51429rem!important;
+        margin-right: .91429rem!important;
+        width: inherit;
+    }
+}
+
+@media (prefers-color-scheme: light) {
+    .navbar:not(.headroom--top):not(.transparent) {
+        background-color: rgba(250,250,252,.9)!important;
     }
 }
 
@@ -127,12 +141,6 @@
     }
 }
 
-@media (max-width: 859px) {
-    .search-box {
-        margin-right: 0;
-    }
-}
-
 .search-results > ul {
     list-style: none;
     padding: 0;
@@ -189,3 +197,27 @@
         padding: 0;
     }
 }
+
+.sidebar-button .icon {
+    display: block;
+    width: 1.25rem;
+    height: 1.25rem;
+}
+
+.sidebar-button {
+    cursor: pointer;
+    display: none;
+    width: 1.25rem;
+    height: 1.25rem;
+    position: absolute;
+    padding: .6rem;
+    top: .6rem;
+    left: 1rem;
+}
+
+@media (max-width: 859px) {
+    .sidebar-button {
+        display: block;
+    }
+}
+
