--- a/templates/default/fulldoc/html/css/sidebar.css
+++ b/templates/default/fulldoc/html/css/sidebar.css
@@ -27,6 +27,10 @@
         transform: translateX(-100%);
         transition: transform .2s ease;
     }
+
+    .sidebar-open .sidebar {
+        transform: translateX(0);
+    }
 }
 
 @media (max-width: 1023px) {
